--- a/gb/ncid277_3.md
+++ b/gb/ncid277_3.md
@@ -1,11 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/iqwytd266/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iqwytd266/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707147.md#1" target="_blank">程晓容：华为251折射中共司法冤案黑幕</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707147.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dd8865fa144798_ttl7dayQN6_d00e5415efdd629e-150x120.jpg" align ="left"></a>华为“251”是一颗炸弹，把许多人从“中国梦”中惊醒。一个表面上代表民族实力的品牌企业，它的“狼性”折射出其主人的非人化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706422.md#1" target="_blank">高以翔骤逝事件 节目方猪队友发文惹怒网友</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706422.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020710031487-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔11月27日在录制浙江卫视综艺节目《追我吧》时意外骤逝，震惊各界。而被网民质疑延误救人的节目方，不仅迟迟不肯道歉，而且在短短几天内频出“猪队友”，引发网友炮轰“冷血无情”、“收买人命”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706258.md#1" target="_blank">大戏版《愿荣光》出炉 创作者：以粤剧聚人心</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706258.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909110955402188-150x120.jpg" align ="left"></a>香港“反送中”运动已持续近半年，近日，一批“热爱粤剧的香港人”将这场运动的标志性歌曲《愿荣光归香港》制作成大戏版，上线三天即获得逾13万的点击量。创作者表示，“希望以粤剧形式来记录这荒诞时代，凝聚全体香港人的心。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:55 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706089.md#1" target="_blank">留学瑞士考卷几乎全留白 李嫣自叹与数学无缘</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706089.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/VCG111117074934_meitu_1-150x120.jpg" align ="left"></a>大方自信的李嫣，因是知名歌手王菲和李亚鹏的女儿，常常成为媒体关注的焦点。13岁的她，今年9月远赴瑞士留学，入读的布索里贵族中学（College Alpin Beau Soleil）每年学费高达10.7万瑞士法郎（约合77万人民币）。她不时分享留学生活，6日在Instagram（IG）贴出疑似答案栏大多是空白的考卷，并大叹“与数学无缘”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706291.md#1" target="_blank">中共躲在防火墙后“放炮” 瞄准香港抗议者</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/04/161681431-1-150x120.jpg" align ="left"></a>香港民众民主抗争至今，除了用身躯抵挡橡皮弹、催泪弹外，西方媒体最近揭露，他们还必须用智慧抵抗中共发射的网络弹。网络专家表示，中共“大炮”正试图使连登（LIHKG）网站瘫痪，但不太可能成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706190.md#1" target="_blank">【新闻看点】港警一哥赴京前喊话 民阵怒怼</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706190.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/78575841_2824595027577938_3259952848510648320_o-150x120.jpg" align ="left"></a>港警一哥临到北京前主动提到已经对民阵申请的12月8日（周日）游行发出了“不反对通知书”。说如果当天有暴力事件发生，民阵“应拿出勇气谴责”。在今天下午的记者会上，民阵召集人岑子杰对邓炳强进行了呛声。他反问“港警一哥”：“有没有勇气先谴责警暴？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706188.md#1" target="_blank">中共公安部长会港警“一哥” 泄三大信息</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706188.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191111100311100615-150x120.jpg" align ="left"></a>12月6日，中共公安部部长赵克志在北京会见了到访的香港警务处处长邓炳强。时政评论员表示，本次会面泄漏了三大秘密。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706324.md#1" target="_blank">库德洛：美中正在商讨农产品购买数量</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706324.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1163406235-150x120.jpg" align ="left"></a>白宫经济顾问拉里·库德洛（Larry Kudlow）周五（12月6日）表示，美中两国正努力就北京购买美国农产品的数量达成协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 4:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706111.md#1" target="_blank">王立强：李源潮涉乐视网 中共窃美武器技术</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706111.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1c39f01121bf3ad005633263ade16339-150x120.jpg" align ="left"></a>出逃到澳大利亚的前中共间谍王立强在一份声明中说，中共军方利用香港关系企业搜集情报，窃取美国先进军事技术。他也透露，曾与其他人施压前中共国家副主席李源潮，并调查乐视网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 4:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706046.md#1" target="_blank">2021年全球监控摄像头达10亿 过半在中国</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706046.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1166233093-150x120.jpg" align ="left"></a>一份新的报告显示，到2021年，全球将有数以10亿的摄像头在监视这个世界，其中一半以上位于中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:58 AM							</td></tr>
@@ -34,7 +27,14 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704694.md#1" target="_blank">贵安新区公安局前局长被双开 长期包养情妇</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3ca321b108d2cb590fa1c5bcdf96ffa2-150x120.jpg" align ="left"></a>12月3日，中共贵州省纪监委通报，贵安新区管委会前党组成员，贵安新区公安局前党委书记、局长高永昌被双开。通报指高永昌不仅受贿数额特别大，而且还与多女搞权色交易，长期养情妇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703901.md#1" target="_blank">华为失民心 孟晚舟鸡汤信败给李洪元251</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703901.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/10-5-150x120.jpg" align ="left"></a>中国电讯巨头华为的爱国光环褪色，“华为公主”孟晚舟的鸡汤文更收到中国网民的犀利回应：“小孟在豪宅忍辱负重，小李在看守所砥励前行”，横批“251”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11704015.md#1" target="_blank">大陆网上公开贩卖人脸数据 信息疑遭泄露</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11704015.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7ee8fda6b05ec3eb6f4bace7464415fb-150x120.jpg" align ="left"></a>人脸识别技术在中国大陆被广泛运用到监视系统。然而，央视近日自曝人脸数据已遭贩卖，人脸信息泄露引发民众愤怒和忧虑。外界质疑，人脸识别技术在中国被非法滥用，安全方面存在漏洞，因此归咎于黑市。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:36 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11706621.md#1" target="_blank">收受巨财 黑龙江黑河市前统战部女部长被双开</a><br></h3>12月7日，中共黑龙江省黑河市委原常委、统战部部长，黑河市社会主义学院前院长郭建华（女）“严重违纪违法问题”被立案审查调查及被双开。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703843.md#1" target="_blank">《半夜鸡叫》作者去世 中共斗地主杜撰周扒皮</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703843.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6e72e157-8605-449b-b75d-2e5c3d672cff-800x533-150x120.jpg" align ="left"></a>近日，曾经创作出家喻户晓的地主形象“周扒皮”的作者高玉宝因病去世，引发舆论关注。尽管人们现在逐渐认识到中共教科书上描述的“周扒皮”事迹是虚构的，但地主剥削雇农的负面形象早已深入人心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703917.md#1" target="_blank">总统大选在即 台法院判处共谍案 3人获刑</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703917.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1808231139272378-150x120.jpg" align ="left"></a>台湾距离2020年1月11日总统与立法委员选举不到40天时间。11月23日澳洲媒体爆出的“王立强共谍案”仍在台湾岛内引发热议。本周12月3日，台湾法院即出炉判处两起分别与中共有关的政治献金案和在台吸收共谍案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703718.md#1" target="_blank">范冰冰赴美为好莱坞影片配音 身材发福引热议</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703718.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/VCG111126431515_meitu_1-150x120.jpg" align ="left"></a>去年卷入逃税风波的大陆女星范冰冰，12月4日现身北京机场，准备前往美国洛杉矶为好莱坞影片《355》配音。不知是否因获准复出而受到许多粉丝热情送行并心情大好，一向注重保暖的她，此次似乎忘了拉上外套的拉链，让眼尖的网友发现她身材发福，肚子明显凸起，引发热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703496.md#1" target="_blank">【新闻看点】北京战狼式外交 加速孤立于世界</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703496.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140247431758-150x120.jpg" align ="left"></a>距离12月15日美国提高中国商品关税的时间还有10天，今天（12月5日）中共口风放软了。中共商务部发言人高峰表示，如果中美双方达成第一阶段协议，应该相应降低关税。中方突然放软身段，与前几天的强硬表现大不相同。有知情人向彭博社透露，第一阶段协议可能在12月15日美方提高关税前完成。川普对美中谈判表达悲观之后，昨天表示美中谈判进展“非常顺利”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703689.md#1" target="_blank">对民企能不捕的不捕 中共最高检言论遭轰</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/1401312212562068-150x120.jpeg" align ="left"></a>据中共官媒报导，中共最高检长张军3日在参加最高检开放日活动时声称要“保护民营企业合法权益”，提出“对涉嫌犯罪的民营企业负责人能不捕的不捕，能不诉的不诉，能缓刑的缓刑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703340.md#1" target="_blank">中共央视漫画攻击美国 弄出国际大笑话</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a8b49962e43c02ce760f77b4e484ab00-150x120.jpg" align ="left"></a>美国通过《香港人权与民主法案》后，中共央视用漫画攻击美国，不料弄出个国际级笑话——错把美国国会山庄当白宫，反遭讥讽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:06 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703525.md#1" target="_blank">蓬佩奥访问葡萄牙：与华为合作带来风险</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703525.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186559421-150x120.jpg" align ="left"></a>美国国务卿迈克·蓬佩奥（Mike Pompeo）于周四（12月5日）在里斯本向记者表示，在“过去两年里”，美国在努力确保其全球合作伙伴意识到与华为等公司合作的风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703260.md#1" target="_blank">美媒：629名巴基斯坦女子被贩到中国当新娘</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703260.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1148931765-150x120.jpg" align ="left"></a>一张又一张的白纸上堆满了名字：来自巴基斯坦各地的629名女孩和妇女被卖到中国作新娘，屡屡雪上加霜，境遇凄惨。整理该清单的巴基斯坦调查人员决心破获这个将该国穷人和弱势群体作为贩卖对象的犯罪网络。没想到，他们调查的脚步却因两国之间“有利可图的”关系而被迫停止。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705484.md#1" target="_blank">陕西官场持续地震 华阴政法委前书记被双开</a><br></h3>12月6日陕西官方消息称，日前，渭南华阴市委前常委、政法委书记权渭阳被立案审查调查，并被双开。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705142.md#1" target="_blank">受贿千万 山东前统战副部长马啸被判11年半</a><br></h3>12月6日，中共山东省政协前常委、省委统战部前副部马啸受贿案宣判，其被控受贿1200余万元（人民币），被判有期徒刑11年6个月。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_4.md#1">下一页</a></h3></td></tr>
